--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    ext.kotlin_version = "1.4.0"
     repositories {
-        google()
         jcenter()
+        maven { url "https://jitpack.io" }
+        maven {url 'https://maven.google.com'}
+        google()
+
+
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'androidx.multidex:multidex:2.0.1'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
