--- a/gradle.properties
+++ b/gradle.properties
@@ -20,5 +20,9 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 #local host
-h="http\://192.168.1.103"
-p="\:5902"
+#h="http\://192.168.1.103"
+#p="\:5902"
+
+#internet
+h="http://f93a4e69dbf1.ngrok.io"
+p="ngrok.io"
