category fragment UI will be over soon

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".login.LoginActivity">
+        <activity android:name=".BaseActivity"></activity>
+        <activity android:name=".splash.SplashActivity" />
+        <activity android:name=".login.view.LoginActivity">
+
+        </activity>
+        <activity
+            android:name=".main.view.MainActivity"
+            android:theme="@style/mainTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".main.MainActivity">
-
         </activity>
     </application>
 
