--- a/gradle.properties
+++ b/gradle.properties
@@ -18,11 +18,12 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
+
 kotlin.code.style=official
 #local host
-#h="http\://192.168.1.103"
-#p="\:5902"
+h="http\://192.168.1.103"
+p="\:5902"
 
 #internet
-h="http://f93a4e69dbf1."
-p="ngrok.io"
+#h="http://f93a4e69dbf1."
+#p="ngrok.io"
