--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,17 +33,19 @@ android {
     }
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
+
     }
     buildTypes.each {
         it.buildConfigField 'String', 'H', h
         it.buildConfigField 'String', 'P', p
     }
+
 }
 allprojects {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
-        maven {url 'https://maven.google.com'}
+        maven { url 'https://maven.google.com' }
         google()
 
     }
@@ -95,9 +97,13 @@ dependencies {
 
     implementation 'com.chaos.view:pinview:1.4.3'
     implementation 'com.github.GoodieBag:Pinview:v1.4'
-
-
-
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation "androidx.exifinterface:exifinterface:1.3.0"
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 
 }
