--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 //apply plugin: "androidx.navigation.safeargs"
 apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 
 
 android {
@@ -12,7 +14,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.pregnancykotlin"
-        minSdkVersion 16
+        minSdkVersion 18
         targetSdkVersion 29
         versionCode 1
         multiDexEnabled true
@@ -60,7 +62,12 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    testImplementation 'junit:junit:4.12'
+    implementation 'com.google.firebase:firebase-analytics-ktx:17.5.0'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:17.2.1'
+    implementation 'com.google.firebase:firebase-messaging:20.2.4'
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.code.gson:gson:2.8.5'
@@ -104,6 +111,23 @@ dependencies {
     implementation "androidx.exifinterface:exifinterface:1.3.0"
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //chuck
+    debugImplementation 'com.readystatesoftware.chuck:library:1.1.0'
+    releaseImplementation 'com.readystatesoftware.chuck:library-no-op:1.1.0'
+
+    implementation 'com.zkk.view:ZkkRulerView:1.0.0'
+    implementation 'com.zjun:rule-view:0.0.1'
+//    implementation 'com.shawnlin:number-picker:2.4.10'//remove this
+    implementation 'com.github.lany192:NumberPicker:1.0.4'
+    implementation 'com.github.aliab:Persian-Date-Picker-Dialog:1.5.2'
+
+
+
+
+
+
+
 
 
 }
