--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.pregnancykotlin"
-        minSdkVersion 18
+        minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
         multiDexEnabled true
@@ -45,28 +45,31 @@ android {
 }
 allprojects {
     repositories {
+        google()
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url 'https://maven.google.com' }
-        google()
 
     }
 }
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.0-alpha02'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.firebase:firebase-analytics-ktx:17.5.0'
-    implementation 'com.google.firebase:firebase-crashlytics-ktx:17.2.1'
-    implementation 'com.google.firebase:firebase-messaging:20.2.4'
-    implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:17.2.2'
+    implementation 'com.google.firebase:firebase-messaging:20.3.0'
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha06'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -96,6 +99,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    //noinspection LifecycleAnnotationProcessorWithJava8
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.1'
@@ -106,8 +110,8 @@ dependencies {
     implementation 'com.github.GoodieBag:Pinview:v1.4'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+//    implementation 'com.github.bumptech.glide:glide:4.11.0'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation "androidx.exifinterface:exifinterface:1.3.0"
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
@@ -118,9 +122,22 @@ dependencies {
 
     implementation 'com.zkk.view:ZkkRulerView:1.0.0'
     implementation 'com.zjun:rule-view:0.0.1'
-//    implementation 'com.shawnlin:number-picker:2.4.10'//remove this
     implementation 'com.github.lany192:NumberPicker:1.0.4'
     implementation 'com.github.aliab:Persian-Date-Picker-Dialog:1.5.2'
+    //banner slider
+    implementation 'com.github.MoeidHeidari:banner:1.04'
+    implementation 'com.ss.bannerslider:bannerslider:2.0.0'
+    implementation 'com.github.zhpanvip:BannerViewPager:3.2.0'
+
+    //indicator
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
+//video player
+    implementation 'com.henryblue.mxvideoplayer:xvideoplayer:1.2.1'
+    implementation 'com.github.HamidrezaAmz:MagicalExoPlayer:1.0.16'
+
+
+
+
 
 
 
