--- a/gradle.properties
+++ b/gradle.properties
@@ -21,9 +21,9 @@ android.enableJetifier=true
 
 kotlin.code.style=official
 #local host
-h="http\://192.168.1.103"
-p="\:5902"
+#h="http\://192.168.1.103"
+#p="\:5902"
 
 #internet
-#h="http://f93a4e69dbf1."
-#p="ngrok.io"
+h="http://b63e6718efef."
+p="ngrok.io"
