--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
         versionCode 1
         multiDexEnabled true
         versionName "1.0"
+        android.defaultConfig.vectorDrawables.useSupportLibrary = true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -50,6 +51,7 @@ allprojects {
         maven { url "https://jitpack.io" }
         maven { url 'https://maven.google.com' }
 
+
     }
 }
 dependencies {
@@ -60,16 +62,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0-alpha03'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.firebase:firebase-analytics-ktx:18.0.0'
-    implementation 'com.google.firebase:firebase-crashlytics-ktx:17.2.2'
-    implementation 'com.google.firebase:firebase-messaging:21.0.0'
-    implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:17.3.0'
+    implementation 'com.google.firebase:firebase-messaging:21.0.1'
+    implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
     implementation 'com.google.firebase:firebase-analytics:18.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha06'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-beta01'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -95,10 +97,10 @@ dependencies {
     implementation 'io.github.inflationx:viewpump:2.0.3'
     def lifecycle_version = "2.2.0"
     def arch_version = "2.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     //noinspection LifecycleAnnotationProcessorWithJava8
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
@@ -142,8 +144,35 @@ dependencies {
     implementation 'com.jackandphantom.android:androidlikebutton:1.2.0'
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
 
+    def paging_version = "2.1.2"
+
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+    // For Kotlin use paging-runtime-ktx
+
+    // alternatively - without Android dependencies for testing
+    testImplementation "androidx.paging:paging-common-ktx:$paging_version"
+    // For Kotlin use paging-common-ktx
+
+    // optional - RxJava support
+    implementation "androidx.paging:paging-rxjava2-ktx:$paging_version"
+    // For Kotlin use paging-rxjava2-ktx
+
+    //animatedSvg
+    implementation 'com.jaredrummler:animated-svg-view:1.0.6'
+    implementation 'com.github.tarek360.RichPath:animator:0.1.1'
+    implementation 'com.agrawalsuneet.androidlibs:svgloaderspack:0.1'
+    implementation 'com.eftimoff:android-pathview:1.0.8@aar'
+
+    //intro
+    implementation 'com.github.AppIntro:AppIntro:6.0.0'
+
+    //stateLayout
+    implementation 'com.github.erkutaras:StateLayout:1.5.0'
+    implementation 'com.github.gturedi:StatefulLayout:1.2.2'
+
 
 
 
 
 }
+
