--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0-alpha03'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'io.github.ShawnLin013:number-picker:2.4.13'
+    implementation 'com.github.arimorty:floatingsearchview:2.1.1'
 
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -124,7 +126,7 @@ dependencies {
 
     implementation 'com.zkk.view:ZkkRulerView:1.0.0'
     implementation 'com.zjun:rule-view:0.0.1'
-    implementation 'com.github.lany192:NumberPicker:1.0.4'
+//    implementation 'com.github.lany192:NumberPicker:1.0.4'
     implementation 'com.github.aliab:Persian-Date-Picker-Dialog:1.5.2'
     //banner slider
     implementation 'com.github.MoeidHeidari:banner:1.04'
