--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,16 +88,16 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'com.google.firebase:firebase-analytics-ktx:19.0.0'
-    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.0'
-    implementation 'com.google.firebase:firebase-messaging:22.0.0'
-    implementation 'com.google.firebase:firebase-crashlytics:18.2.0'
-    implementation 'com.google.firebase:firebase-analytics:19.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.firebase:firebase-analytics-ktx:18.0.0'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:17.3.0'
+    implementation 'com.google.firebase:firebase-messaging:21.0.1'
+    implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
+    implementation 'com.google.firebase:firebase-analytics:18.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-beta01'
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:4.7.2'
@@ -105,13 +105,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.15'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    api 'com.google.dagger:dagger:2.35.1'
-    kapt 'com.google.dagger:dagger-compiler:2.35.1'
+    api 'com.google.dagger:dagger:2.27'
+    kapt 'com.google.dagger:dagger-compiler:2.17'
 
     implementation 'com.vicmikhailau:MaskedEditText:3.0.4'
 //jetpack navigation
     def nav_version = "2.3.0"
-
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
@@ -120,7 +119,6 @@ dependencies {
     implementation 'io.github.inflationx:viewpump:2.0.3'
     def lifecycle_version = "2.2.0"
     def arch_version = "2.2.0"
-
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     // LiveData
@@ -128,7 +126,7 @@ dependencies {
     //noinspection LifecycleAnnotationProcessorWithJava8
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
-    implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.2'
+    implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.1'
     implementation 'com.airbnb.android:lottie:3.4.4'
     implementation 'com.github.mayuce:LottieAlertDialog:1.2'
 
@@ -138,7 +136,7 @@ dependencies {
     //glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
-    implementation "androidx.exifinterface:exifinterface:1.3.2"
+    implementation "androidx.exifinterface:exifinterface:1.3.1"
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
@@ -148,7 +146,6 @@ dependencies {
 
     implementation 'com.zkk.view:ZkkRulerView:1.0.0'
     implementation 'com.zjun:rule-view:0.0.1'
-    implementation 'io.github.ShawnLin013:number-picker:2.4.13'
     implementation 'com.github.aliab:Persian-Date-Picker-Dialog:1.5.2'
     //banner slider
     implementation 'com.github.MoeidHeidari:banner:1.04'
@@ -168,7 +165,7 @@ dependencies {
     implementation 'com.jackandphantom.android:androidlikebutton:1.2.0'
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
 
-    def paging_version = "3.0.1"
+    def paging_version = "2.1.2"
 
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
     // For Kotlin use paging-runtime-ktx
@@ -188,27 +185,25 @@ dependencies {
     implementation 'com.eftimoff:android-pathview:1.0.8@aar'
 
     //intro
-//    implementation 'com.github.AppIntro:AppIntro:6.0.0'
-    implementation project(':appintro')
+    implementation 'com.github.AppIntro:AppIntro:6.0.0'
 
     //stateLayout
     implementation 'com.github.erkutaras:StateLayout:1.5.0'
     implementation 'com.github.gturedi:StatefulLayout:1.2.2'
-//justify
-    implementation 'com.codesgood:justifiedtextview:1.1.0'
-    implementation 'com.uncopt:android.justified:1.0'
+
+
+    //Added new implementation
+    implementation 'com.github.arimorty:floatingsearchview:2.1.1'
+    implementation 'com.otaliastudios:zoomlayout:1.8.0'
+    implementation 'io.github.ShawnLin013:number-picker:2.4.13'
+
     implementation 'com.github.erkutaras:ShowcaseView:1.5.0'
-    implementation 'com.github.bluejamesbond:textjustify-android:2.1.6'
-    implementation 'me.biubiubiu.justifytext:library:1.1'
 
     implementation 'com.github.deano2390:MaterialShowcaseView:1.3.4'
 
     implementation 'org.sufficientlysecure:html-textview:4.0'
-    implementation 'com.github.SakaGamer:html-textview:1.0.8'
-//    implementation 'it.sysdata.mobile:htmlspanner:1.0.2'
-//    implementation 'net.sourceforge.htmlcleaner:htmlcleaner:2.16'
-    implementation 'com.github.arimorty:floatingsearchview:2.1.1'
 
+    implementation 'com.uncopt:android.justified:1.0'
 
 
 
